# eokulapi

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
eokulapi/: EokulAPI.py  __init__.py  eokulapi.py
eokulapi/Models/: Absenteeism.py  AbsenteeismContainer.py  AdditionalExam.py  AvgMark.py  AvgMarkContainer.py  AvgMarkLesson.py  Document.py  DocumentContainer.py  EndtermMark.py  EndtermMarkContainer.py  EokulDictable.py  EokulStudent.py  ExamSchedule.py  ExamScheduleContainer.py  Lesson.py  LessonDay.py  LessonSchedule.py  MarkContainer.py  MarkLesson.py  Responsibility.py  Transfer.py  __init__.py
src/eokulapi/: eokulapi.py
src/eokulapi/Models/: Absenteeism.py  AbsenteeismContainer.py  AdditionalExam.py  AvgMark.py  AvgMarkContainer.py  AvgMarkLesson.py  Day.py  Document.py  DocumentContainer.py  EndtermMark.py  EndtermMarkContainer.py  EokulException.py  EokulStudent.py  ExamSchedule.py  ExamScheduleContainer.py  Lesson.py  LessonDay.py  LessonSchedule.py  MarkContainer.py  MarkLesson.py  Responsibility.py  Transfer.py  __init__.py
tests/: test.py  test_eokulapi.py
